# sweasy

./: .gitignore  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  desktop.html  docker-compose.yml  manage.py  mobile.html  pyproject.toml
.claude/: settings.json
.claude/skills/task-formulator/: SKILL.md
.github/: copilot-mcp-config.json
.github/skills/skill-creator/: SKILL.md
.github/skills/skill-creator/references/: checklist.md  decision-matrix.md  skill-review.md
docs/: docs.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: BottomNav.tsx  Footer.tsx  LegalLayout.tsx  MoodBar.tsx  Navbar.tsx  ServiceLayout.tsx
frontend/src/components/sections/: CTA.tsx  Facts.tsx  Hero.tsx  LiveFeed.tsx  Tours.tsx
frontend/src/components/ui/: Badge.tsx  CookieBanner.tsx  FactCard.tsx  Icon.tsx  LanguageSwitcher.tsx  PostCard.tsx  ThemeToggle.tsx  VideoNote.tsx
frontend/src/config/: types.ts
frontend/src/hooks/: usePageTracking.ts  useSEO.ts  useTheme.ts
frontend/src/lib/: analytics.ts
frontend/src/pages/: Cookies.tsx  FamilyTours.tsx  Hiking.tsx  Home.tsx  Impressum.tsx  IndividualTours.tsx  Interlaken.tsx  Lucerne.tsx  NotFound.tsx  Privacy.tsx  Terms.tsx  VipTours.tsx  Yachting.tsx  Zurich.tsx
static/: main.css
sweasy/: admin.py  app.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
sweasy/card/: admin.py  apps.py
sweasy/card/migrations/: 0001_initial.py
sweasy/management/commands/: generate_page.py  load_page.py  parse_instagram.py  seed_from_json.py
sweasy/migrations/: 0001_initial.py  0002_proper_content_models.py
sweasy/parsers/: instagram.py  models.py  page_generator.py  page_models.py  renderer.py
sweasy/static/: main.css
sweasy/templates/: content_page.html  index.html  layout.html
sweasy/tour/: admin.py  apps.py  models.py  urls.py  views.py
sweasy/tour/migrations/: 0001_initial.py  0002_alter_tour_description.py
templates/: content_page.html  home.html  index.html  layout.html  swiss.html  tour_detail.html
tests/: test_instagram.py  test_models.py  test_renderer.py
