[tool.poetry]
name = "sweasy"
version = "0.1.0"
description = "Private guide website in Switzerland built with Django."
authors = ["Niko <niko@example.com>"]
packages = [{ include = "sweasy" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
pydantic = "^2.0"
requests = "^2.31"
openai = ">=1.68"
google-genai = ">=1.0"
dj-database-url = ">=2.0"
gunicorn = ">=21.0"
psycopg2-binary = ">=2.9"
Pillow = ">=10.0"
whitenoise = "^6.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
